fix input width on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,7 +235,7 @@ main .hero .cta p.cta-text {
   font-family: var(--font-poppins);
   color: var(--color-gray-2);
   background-color: var(--color-gray-6);
-  /* text-indent: 20px; */
+  text-indent: 20px;
   border-radius: var(--border-radius-sm);
 
   border: none;
@@ -814,6 +814,10 @@ footer .contact-area .footer-middle .social-media {
     max-width: 291px;
   }
 
+  main .hero .cta {
+    max-width: 291px;
+  }
+
   .email-input input {
     max-width: 291px;
     font-size: 14px;
@@ -885,6 +889,10 @@ footer .contact-area .footer-middle .social-media {
   main .clients p.review {
     font-size: 24px;
     line-height: 36px;
+  }
+
+  footer .cta {
+    max-width: 290px;
   }
 
   footer .cta .email-input {
